--- a/.github/workflows/public-docs.yml
+++ b/.github/workflows/public-docs.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
       - run: npm install
-      - run: npm run typedoc
+      - run: npx typedoc
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
